docs: add production Dockerfile references across documentation
Update READMEs for organiclever-be, organiclever-web, dev infra, k8s
environments, local dev Docker guide, and monorepo structure reference
with Dockerfile locations, build commands, and image characteristics.
Fix stale infra/local/ tree to infra/dev/ in Docker how-to guide.